# todork

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.sh
.claude/: settings.json
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md
.github/workflows/: ci.yml  pages.yml  release.yml
samples/lua/: cache.lua  router.lua
samples/node/: helpers.ts  index.js  server.js
samples/python/: app.py  config.py  utils.py
samples/qsharp/: Grover.qs  Teleport.qs
samples/zig/: http.zig  main.zig
src/: blame.rs  cli.rs  config.rs  error.rs  exit_code.rs  lib.rs  main.rs  matcher.rs  pager.rs  scanner.rs  upgrade.rs  walker.rs
src/formatter/: github.rs  json.rs  mod.rs  table.rs  text.rs
tests/: blame.rs  flags.rs  integration.rs  samples.rs
website/: .gitignore  .oxlintrc.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
website/adapters/static/: vite.config.ts
website/src/: global.css  root.tsx
website/src/components/router-head/: router-head.tsx
website/src/routes/: index.tsx  layout.tsx
