[package]
name = "todork"
version = "1.2.0"
edition = "2021"
rust-version = "1.86"
description = "Hyper-fast CLI scanner for TODO/FIXME/HACK annotations in codebases"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tjklint/todork"
keywords = ["todo", "fixme", "annotations", "scanner", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "todork"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color", "suggestions", "wrap_help", "cargo"] }
ignore = "0.4"
rayon = "1.10"
aho-corasick = "1.1"
memchr = "2.7"
regex = "1.11"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.4"
globset = "0.4"
crossbeam-channel = "0.5"
num_cpus = "1.16"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
ureq = { version = "2", features = ["json"] }
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
insta = { version = "1.41", features = ["json"] }
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
